# events-platform-hexagonal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  main.py
app/api/: dependencies.py
app/api/schemas/: ai.py  attendee.py  auth.py  event.py  session.py
app/api/v1/: admin_chat.py  ai.py  attendees.py  auth.py  events.py  sessions.py  users.py
app/application/: attendee_service.py  auth_service.py  event_service.py  session_service.py
app/domain/: enums.py  exceptions.py
app/domain/entities/: attendee.py  event.py  session.py  user.py
app/domain/ports/: attendee_repository.py  cache_port.py  event_repository.py  session_repository.py  user_repository.py
app/infrastructure/cache/: memory_cache.py  redis_cache.py
app/infrastructure/database/: connection.py  models.py
app/infrastructure/database/repositories/: attendee_repository.py  event_repository.py  session_repository.py  user_repository.py
app/infrastructure/security/: jwt_handler.py
migrations/: env.py
migrations/versions/: 5076146f0926_initial_schema.py
scripts/: seed_events.py  seed_users.py  start.sh
tests/: conftest.py  test_auth.py
