[tool.poetry]
name = "mis-eventos-backend"
version = "1.0.0"
description = "Backend API for Mis Eventos - Event Management Platform"
authors = ["Felipe"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlmodel = "^0.0.22"
alembic = "^1.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.18"
pydantic-settings = "^2.7.0"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
bcrypt = "4.0.1"
psycopg2-binary = "^2.9.12"
google-genai = "^2.2.0"
gunicorn = "^26.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"
pytest-cov = "^6.0.0"
ruff = "^0.15.13"
mypy = "^2.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
